fix alignment issue

--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@
     --shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+main h2,
+main p,
+figure figcaption,
+dl dt,
+dl dd,
+ul li {
+    text-align: center;
+}
+
 body {
     text-align: center;
     height: 100%;
@@ -249,4 +258,5 @@ footer {
     form {
         max-width: 500px;
     }
+
 }
